add create user module
