# router/app.go
@@ -16,7 +16,7 @@ func Router() *gin.Engine {
 	docs.SwaggerInfo.BasePath = ""
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	r.GET("/index", service.GetIndex)
-	r.GET("/user/getUserList", service.GetUserList)
-
+	r.GET("/user/GetUserList", service.GetUserList)
+	r.GET("/user/CreateUser", service.CreateUser)
 	return r
 }
